--- a/sitioweb.html
+++ b/sitioweb.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<title>Solaris</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
         body {
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -11,80 +12,102 @@
 			padding: 0;
 		}
         header {
-		background-color: rgb(255, 255, 255); 		
-		color: rgb(22, 20, 0); 		
-		padding: 20px; 		
-		text-align: center
-	}
+			background-color: rgb(255, 255, 255); 		
+			color: rgb(22, 20, 0); 		
+			padding: 20px; 		
+			text-align: center;
+		}
 	
+		h1 {
+			margin: 0;
+		}
 	
-	h1 {
-		margin: 0;
-	}
+		nav {
+			background-color: #555;
+			color: rgb(255, 4, 4);
+			padding: 10px;
+		}
 	
-	nav {
-		background-color: #555;
-		color: rgb(255, 4, 4);
-		padding: 10px;
-	}
+		nav ul {
+			margin: 0;
+			padding: 0;
+			list-style: none;
+			text-align: center;
+		}
 	
-	nav ul {
-		margin: 0;
-		padding: 0;
-		list-style: none;
-		text-align: center;
-	}
+		nav ul li {
+			display: inline-block;
+			margin: 0 10px;
+		}
 	
-	nav ul li {
-		display: inline-block;
-		margin: 0 10px;
-	}
+		nav ul li a {
+			color: white;
+			text-decoration: none;
+			padding: 5px;
+		}
 	
-	nav ul li a {
-		color: white;
-		text-decoration: none;
-		padding: 5px;
-	}
+		main {
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
+			background-color: white;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+		}
 	
-	main {
-		max-width: 800px;
-		margin: 0 auto;
-		padding: 20px;
-		background-color: white;
-		box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-	}
+		section {
+			margin-bottom: 20px;
+		}
 	
-	section {
-		margin-bottom: 20px;
-	}
+		section h2 {
+			margin-top: 0;
+		}
 	
-	section h2 {
-		margin-top: 0;
-	}
+		section p {
+			margin-top: 0;
+			line-height: 1.5;
+		}
 	
-	section p {
-		margin-top: 0;
-		line-height: 1.5;
-	}
+		section img {
+			max-width: 100%;
+		}
 	
-	section img {
-		max-width: 100%;
-	}
-	
-	footer {
-		background-color: #333;
-		color: white;
-		padding: 20px;
-		text-align: center;
-	}
-    </style>
+		footer {
+			background-color: #333;
+			color: white;
+			padding: 20px;
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
-	
-<footer>
-	<center>
-		<br><tt>Creado por Yahir Alejandro Roque Martinez</tt></br>
-	</center>
-</footer>	
+
+	<header>
+		<h1>Bienvenidos a Solaris</h1>
+	</header>
+
+	<nav>
+		<ul>
+			<li><a href="#">Inicio</a></li>
+			<li><a href="#">Sobre</a></li>
+			<li><a href="#">Contactar</a></li>
+		</ul>
+	</nav>
+
+	<main>
+		<section>
+			<h2>Introducción</h2>
+			<p>Bienvenido a Solaris, un sitio dedicado a la exploración y la ciencia ficción.</p>
+		</section>
+
+		<section>
+			<h2>Características</h2>
+			<p>En Solaris, encontrarás artículos y recursos sobre el mundo de la ciencia ficción, tecnología avanzada y más.</p>
+		</section>
+	</main>
+
+	<footer>
+		<p>Creado por Yahir Alejandro Roque Martinez</p>
+	</footer>	
+
 </body>
 </html>
