--- a/sitioweb.html
+++ b/sitioweb.html
@@ -90,38 +90,48 @@
 	<nav>
 		<ul>
 			<li><a href="#">Inicio</a></li>
-			<li><a href="#">Creacion</a></li>
-			<li><a href="#">Caracteristicas</a></li>
-			<li><a href="#">Proposito</a></li>
-			<li><a href="#">Licencia</a></li>
-			<li><a href="#">Sugerencia</a></li>
+			<li><a href="#Creacion">Creacion</a></li>
+			<li><a href="#Caracteristicas">Caracteristicas</a></li>
+			<li><a href="#Proposito">Proposito</a></li>
+			<li><a href="#Licencia">Licencia</a></li>
+			<li><a href="#Sugerencia">Sugerencia</a></li>
 		</ul>
 	</nav>
 
 	<main>
-		<section>
+		<section id="Creacion">
 			<h2>Creacion</h2>
-			<p>Bienvenido a Solaris, un sitio dedicado a la exploración y la ciencia ficción.</p>
+			<p>Solaris es un sistema operativo de tipo Unix desarrollado desde 1992 inicialmente por Sun Microsystems y actualmente propiedad de Oracle Corporation tras la adquisición de Sun por parte de esta. Sucesor de SunOS, es un sistema certificado oficialmente como versión de UNIX. Funciona en arquitecturas SPARC y x86 para servidores y estaciones de trabajo.</p>
+		    <center><img src="https://m.media-amazon.com/images/I/61f2s+qMTYL.jpg",width="430px", height="260px"></center>
 		</section>
 
-		<section>
+		<section id="Caracteristicas">
 			<h2>Caracteristicas</h2>
-			<p>Bienvenido a Solaris, un sitio dedicado a la exploración y la ciencia ficción.</p>
+			<p> Es un sistema operativo basado en Unix, sucesor de SunOS, basado en BSD Unix. Solaris SPARC es más conocido por su escalabilidad. Está diseñado para proporcionar un entorno robusto y estable para aplicaciones empresariales.</p>
+			<p> Permite a los usuarios mantener la productividad en entornos mixtos, integrando nuevos comandos y aplicaciones Linux en la versión. Además, los desarrolladores de aplicaciones de software ya pueden desarrollar y compilar sus aplicaciones Linux con más facilidad en el sistema operativo Solaris.</p>
+			<center><img src="https://d57439wlqx3vo.cloudfront.net/iblock/235/23518575d43fca7aeeb396c5178aaeec/7014046314ce0121afd332e5defb39ae.jpg",width="400px", height="230px"></center>
 		</section>
 
-		<section>
+		<section id="Proposito">
 			<h2>Proposito</h2>
-			<p>Bienvenido a Solaris, un sitio dedicado a la exploración y la ciencia ficción.</p>
+			<p>Solaris se desarrolló en sus orígenes como software propietario, pasando luego a abrirse y luego nuevamente a cerrarlo cuando llegó a Oracle. Desde junio de 2005, Sun Microsystems liberó gran parte del código base bajo CDDL y fundó el proyecto de código abierto</p>
+			<p></p>
+			<center><img src="https://0901.static.prezi.com/preview/v2/7hobeqcuft3owzmkxbjb5rc6wp6jc3sachvcdoaizecfr3dnitcq_3_0.png",width="430px", height="260px"></center>
 		</section>
 
-		<section>
+		<section id="Licencia">
 			<h2>Licencia</h2>
-			<p>Bienvenido a Solaris, un sitio dedicado a la exploración y la ciencia ficción.</p>
+			<p>Bajo el nombre de programa Software Express for Solaris (o simplemente Solaris Express), una versión binaria, construida a partir de la base de desarrollo en curso, se pone a disposición para su descarga de forma gratuita y mensualmente se lanzan actualizaciones, lo que permite a cualquiera probar nuevas características y comprobar la calidad y estabilidad de Solaris, mientras se avanza hacia el lanzamiento de la siguiente versión oficial de Solaris.</p>
+			<p>En las versiones anteriores a 2005 (Solaris 9), Solaris se licenciaba por licencia de pago, lo que permitía al cliente comprar licencias en grandes cantidades e instalar el software en tantas máquinas como quisiera. La nueva licencia permite la distribución gratuita de Solaris 2.4 y 2.5, así como de Solaris 11, y por un periodo ilimitado; sin embargo, la licencia permite expresamente que el usuario sólo utilice Solaris como plataforma de desarrollo, y prohíbe explícitamente los usos comerciales y de producción. Para esos otros usos hay que pagar.</p>
+			<p>Lo cual nos deja ver que aunque en multiples ocasiones "Solaris" se a visto como un sistema operarivo de "pago", tambien se muestran versiones de este mismo ser de "codigo libre" y gratuito.</p>
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBOkiBbnNp5X8FRaJIzrYCoKCkWFu1HnQeHw&s",width="430px", height="260px">
 		</section>
 
-		<section>
+		<section id="Sugerencia">
 			<h2>Sugerencia</h2>
-			<p>En Solaris, encontrarás artículos y recursos sobre el mundo de la ciencia ficción, tecnología avanzada y más.</p>
+			<p>Bajo mi criterios opino que Solaris es un muy buen sistema operativo enfocado en la productividad y el trabajo empresarial, y este mismo deberia de obtener nuevas actualizaciones ya que la ultima actualizacion, la cual fue Solaris 11 fue lanzada el 28 de agosto de 2018, por lo que deberia tener un mayor soporte por parte de la empresa Oracl. </p>
+			<p>Tambien considero que las nuevas versiones mas recientes deberian continuar con el modelo de codigo abierto, parar que este mismo sea mas accesible y por ende la comunidad pueda expandirse, lo cual seria un gran salto parar volverse mas amplio y reconocido.</p>
+			<center><img src="https://www.valencia.es/o/sugerencias/sugerencias/images/sugerencias-comunicaciones.jpg",width="430px", height="260px"></center>
 		</section>
 	</main>
 
